# prediksi_haid

./: .env.example  .gitignore  RANCANGAN-UI-WEB.md  README.md  RENCANA-IMPLEMENTASI.md  SPESIFIKASI-SISTEM-PREDIKSI-HAID.md  pyproject.toml  requirements-dev.txt  requirements.txt
config/: config.yaml
data/raw/: contoh_kuesioner_santriwati.csv
notebooks/: 01_eksplorasi_data.ipynb
scripts/: generate_dummy_data.py  run_evaluation.py  run_prediction.py  run_training.py  setup.bat  setup.sh
src/prediksi_haid/: __init__.py  config.py  constants.py  data_loader.py  dataset_splitter.py  evaluation.py  model.py  pipeline.py  predictor.py  preprocessing.py  transformation.py  visualization.py  web_export.py
tests/: __init__.py  test_data_loader.py  test_dataset_splitter.py  test_evaluation.py  test_model.py  test_preprocessing.py  test_smoke.py  test_transformation.py  test_web_export.py
ui/: evaluasi.html  index.html  login.html  pengujian.html  proses.html  santriwati.html
ui/assets/: app.js  style.css  theme.js
